sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:15: error: Unmatched closing brace '}' ignored here
}
^